Authors. Isomorphism in graphs

--- a/_posts/2014-01-19-fractals.textile
+++ b/_posts/2014-01-19-fractals.textile
@@ -1,6 +1,7 @@
 ---
 title: Фракталы
 layout: post
+author: Alexey Nurgaliev
 ---
 
 _В этой статье приведены примеры расчета и построения графической интерпретации некоторых алгебраических и геометрических фракталов._
