Information post updated

--- a/_posts/2014-01-19-new-post.textile
+++ b/_posts/2014-01-19-new-post.textile
@@ -59,3 +59,16 @@ h3. Математические формулы
 * *HTML* - формулы можно вставлять прямо в код, без дополнительной обработки
 * *Markdown* - формулы модно вставлять без обработки, но их правильное отображение не гарантируется (из-за ограничений языка размерки)
 * *Textile* - формулы нужно заключать внутрь конструкции @==блок с формулой==@
+
+h3. Редактирование сайта
+
+Перед началом редактирования рекомендуется почитать документацию по "Jekyll":http://jekyllrb.com/docs/home/
+
+Назначение каталогов сайта:
+* @_drafts@ - черновики статей
+* @_includes@ - включаемые файлы (добавляются тегом @{{ '{%' }} include [имя_файла] %}@
+* @_layouts@ - шаблоны страниц
+* @_posts@ - файлы статей (см. выше)
+* @css@ - стили CSS
+* @js@ - файлы JavaScript
+* @img@ - каталог для изображений (место размещения изображений не принципиально, но рекомендуется помещать их сюда, в отдельный каталог для статьи)
