--- a/_posts/2014-01-19-new-post.textile
+++ b/_posts/2014-01-19-new-post.textile
@@ -72,3 +72,5 @@ h3. Редактирование сайта
 * @css@ - стили CSS
 * @js@ - файлы JavaScript
 * @img@ - каталог для изображений (место размещения изображений не принципиально, но рекомендуется помещать их сюда, в отдельный каталог для статьи)
+
+Для оформления страниц можно пользоваться библиотекой "Bootstrap":http://getbootstrap.com/
