--- a/_posts/2014-01-19-new-post.textile
+++ b/_posts/2014-01-19-new-post.textile
@@ -19,6 +19,8 @@ h3. Добавление статей
 * @.textile@ - "Textile":http://ru.wikipedia.org/wiki/Textile_%28%D1%8F%D0%B7%D1%8B%D0%BA_%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%82%D0%BA%D0%B8%29
 * @.md@ или @.markdown@ - "Markdown":http://ru.wikipedia.org/wiki/Markdown
 
+Для обработки markdown используется процессор kramdown. Описание расширенного им синтаксиса markdown можно прочитать на "официальном сайте":http://kramdown.gettalong.org/syntax.html
+
 В начале файла должен находиться текст с описанием статьи:
 
 pre. ---
@@ -57,7 +59,7 @@ h3. Математические формулы
 
 Замечания по языкам разметки:
 * *HTML* - формулы можно вставлять прямо в код, без дополнительной обработки
-* *Markdown* - формулы модно вставлять без обработки, но их правильное отображение не гарантируется (из-за ограничений языка размерки)
+* *Markdown* - формулы можно вставлять без обработки. И для вставки внутрь строки и в отдельную строку используется только @$$ ... $$@
 * *Textile* - формулы нужно заключать внутрь конструкции @==блок с формулой==@
 
 h3. Редактирование сайта
