Fix: vagrant post

--- a/_posts/2014-01-19-vagrant.md
+++ b/_posts/2014-01-19-vagrant.md
@@ -42,7 +42,8 @@ Vagrant самостоятельно запустит и настроит вир
 * Python и pip
 * Pygments
 * Jekyll
-* RedCarpet
+* RedCloth
+* kramdown
 
 ### Использование виртуальной машины для разработки
 
