Encoding draft. LaTeX help link

--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -54,7 +54,7 @@ author: Alexey Nurgaliev
 
 Для вставки математических формул можно использовать [MathJax](http://www.mathjax.org/)
 
-Формулы должны быть записаны в формате LaTeX. 
+Формулы должны быть записаны в формате LaTeX. [Справочних по LaTeX](http://physics.nad.ru/latex.html)
 
 Для вставки формулы внутрь строки ее нужно заключить в `\( [формула] \)`
 
