--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -4,7 +4,7 @@ title: Правила и рекомендации по наполнению са
 author: Alexey Nurgaliev
 ---
 
-### Загрузка сайта из репозитория
+### Загрузка из репозитория и запуск
 
 Этот сайт находится в репозитоии [GitHub](https://github.com/n-at/n-at.github.io)
 
@@ -20,7 +20,13 @@ author: Alexey Nurgaliev
 * `.textile` - [Textile](http://ru.wikipedia.org/wiki/Textile_%28%D1%8F%D0%B7%D1%8B%D0%BA_%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%82%D0%BA%D0%B8%29)
 * `.md` или `.markdown` - [Markdown](http://ru.wikipedia.org/wiki/Markdown)
 
-Для обработки markdown используется процессор kramdown. Описание расширенного им синтаксиса markdown можно прочитать на [официальном сайте](http://kramdown.gettalong.org/syntax.html)
+Все файлы проходят предварительную обработку процессором шаблонов [Liquid](http://docs.shopify.com/themes/liquid-basics). 
+
+Для обработки markdown используется процессор kramdown. Описание расширенного им синтаксиса markdown можно прочитать на [официальном сайте](http://kramdown.gettalong.org/syntax.html).
+
+Для обработки файлов, содержащих текст, написанный на языке Textile, используется процессор RedCloth. Описание синтаксиса Textile есть на [официальном сайте](http://redcloth.org/textile/) RedCloth.
+
+Файлы с разметкой HTML дополнительно не обрабатываютя.
 
 В начале файла должен находиться текст с описанием статьи:
 
@@ -30,12 +36,17 @@ author: Alexey Nurgaliev
     author: Alexey Nurgaliev
     ---
 
-
 Назначение полей:
 
 * `layout` - имя шаблона (рекомендуется `post`)
 * `title` - заголовок
-* `author` - автор
+* `author` - автор (необязательное)
+
+Также дополнительно можно указать поле `section:` чтобы поместить статью в специальный раздел сайта. 
+
+* `section: pskov` - Олимпиадное программирование в Псков ГУ
+* `section: programming` - Изучение языков программирования
+* `section: experimental` - Эксперименты
 
 Далее может располагаться любой текст.
 
@@ -50,20 +61,39 @@ author: Alexey Nurgaliev
 * `язык` - язык из [списка](http://pygments.org/docs/lexers/) (указывать "Short name")
 * `linenos` - добавляется для отображения номеров строк
 
+Пример кода с подсветкой синтаксиса:
+
+{% highlight python linenos %}
+class PollViewTest(TestCase):
+
+    def test_indexview_with_no_polls(self):
+        response = self.client.get(reverse('polls:index'))
+        self.assertEqual(response.status_code, 200)
+        self.assertContains(response, "No polls are available")
+        self.assertQuerysetEqual(response.context['latest_poll_list'], [])
+
+    def test_index_view_with_a_past_poll(self):
+        create_poll(question='Past poll', days=-30)
+        response = self.client.get(reverse('polls:index'))
+        self.assertQuerysetEqual(response.context['latest_poll_list'],
+                                 ['<Poll: Past poll>'])
+								 
+{% endhighlight %}
+
 ### Математические формулы
 
-Для вставки математических формул можно использовать [MathJax](http://www.mathjax.org/)
+Для вставки математических формул можно использовать [MathJax](http://www.mathjax.org/).
 
 Формулы должны быть записаны в формате LaTeX. [Справочних по LaTeX](http://physics.nad.ru/latex.html)
 
-Для вставки формулы внутрь строки ее нужно заключить в `\( [формула] \)`
+Для вставки формулы внутрь строки ее нужно заключить в `\( формула \)`
 
-Если формула вставляется в отдельную строку, она заключается в `$$ [формула] $$`
+Если формула вставляется в отдельную строку, она заключается в `$$ формула $$`
 
 Замечания по языкам разметки:
 
 * *HTML* - формулы можно добавлять прямо в код, без дополнительной обработки
-* *Markdown* - формулы можно добавлять без обработки. Но для вставки и внутрь строки и в отдельную строку используется только `$$ ... $$`
+* *Markdown* - формулы можно добавлять без обработки. Но для вставки и внутрь строки и в отдельную строку используется только блок `$$ формула $$`
 * *Textile* - формулы рекомендуется заключать внутрь конструкции `==блок с формулой==`
 
 ### Редактирование сайта
