Международный чемпионат математических и логических игр
Добавлен новый раздел

--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -26,7 +26,7 @@ author: Alexey Nurgaliev
 
 Для обработки файлов, содержащих текст, написанный на языке Textile, используется процессор RedCloth. Описание синтаксиса Textile есть на [официальном сайте](http://redcloth.org/textile/) RedCloth.
 
-Файлы с разметкой HTML дополнительно не обрабатываютя.
+Файлы с разметкой HTML дополнительно не обрабатываютcя.
 
 В начале файла должен находиться текст с описанием статьи:
 
