Тексты задач 1-го тура XXVIII
Только тексты, без изображений (чертежей и рисунков)

--- a/_posts/mathematiques/2014-02-05-XXVIII.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII.md
@@ -8,10 +8,96 @@ section: mathematiques
 http://nveg.ru/
 
 CE – учащиеся 1 и 2 классов
+
 CM – учащиеся 3, 4 и 5 классов
+
 C1 – учащиеся 6 и 7 классов
+
 C2 – учащиеся 8 и 9 классов
+
 L1 – учащиеся 10 и 11 классов
+
 L2 – студенты высших учебных заведений 4-5(6) курсов
+
 GP – студенты 1-3 курсов высших учебных заведений; учащиеся техникумов, лицеев, колледжей; взрослые, не имеющие специального математического образования
+
 HC – взрослые, имеющие математическое образование
+
+#Условия задач:
+
+1. 10 монет
+
+У дядюшки Боба в кошельке 10 монет: 5 монет по 1 евро и 5 монет по 0,50 евро. Он разделил монеты между Матильдой, Матиасом и Матье так, чтобы каждый получил одинаковую сумму денег. Матильда и Матиас получили одинаковое количество монет. Сколько монет по 1 евро и сколько монет по 0,50 евро получил Матье?
+
+2. Даты года
+
+День месяца (от 01 по 31) и номер месяца (от 01 по 12) записываются с использованием двух цифр. Сколько дат с 01 января (01.01) по 31 декабря (31.12) можно составить, используя цифры 2, 0, 1, 4?
+
+3. Утверждение
+
+Вставьте два числа так, чтобы утверждение в рамке было математически верным.
+
+В этой рамке:
+1. есть … нечетное(ых) число (чисел).
+2. есть … четное(ых) число (чисел).
+
+4. Пирамида
+
+В пирамиду из пронумерованных банок бросают мяч. Банка, задетая мячом, падает, увлекая за собой банки, расположенные над ней. Игроку записывается сумма чисел на сбитых банках. Матиас набрал 40 очков. Какую банку сбил его мяч?
+
+5. Браслеты
+
+У Матильды 4 одинаковых браслета. Когда она положила 3 браслета на стол, то они образовали 7 замкнутых областей. Какое максимальное количество областей она может получить, если добавит четвертый браслет?
+
+6. Песни
+
+На школьном празднике Адель, Барбара, Селин и Далила исполнили несколько песен. Каждая песня была исполнена тремя из четырех девушек. Адель исполнила только 4 песни. Далила исполнила наибольшее количество песен – 8. Сколько песен было исполнено на этом празднике?
+
+7. Магический волчок
+
+Одиннадцать кругов волчка содержат все числа от 1 до 11. Сумма чисел, расположенных на каждой линии из трех или пяти кругов, всегда равна 22. Числа от 4 до 10 стерты. Впишите эти числа в пустые круги.
+
+8. Число Матиаса
+
+Матиас написал число из трех цифр, причем последняя цифра – 5. Если перемножить цифру сотен и цифру десятков, то полученный результат будет в 25 раз меньше числа, записанного Матиасом. К несчастью, две первые цифры числа скрыты под чернильными кляксами. Какое число написал Матиас?
+
+9. Бамбуковый треугольник
+
+У Матильды 5 бамбуковых палочек длиной 2 см, 3 см, 4 см, 5 см и 6 см. Из трех палочек можно составить треугольник, который показан на рисунке. Сколько РАЗНЫХ треугольников может составить Матильда, считая образец?
+
+10. Последовательность Матиаса
+
+Первое число Матиаса – это 7. Он возводит его в квадрат (7 ∙ 7=49), затем прибавляет 1 к сумме цифр (4+9+1=14). 14 становится вторым числом в последовательности Матиаса. И так далее Матиас прибавляет 1 к сумме цифр квадрата предыдущего числа. Каким будет тысячное число в последовательности Матиаса?
+
+11. Друзья
+
+В группе друзей, собравшихся на праздник, более 40% парней и более 50% девушек. Каково минимальное количество собравшихся?
+
+12. Прозрачные фигуры
+
+Цифры от 1 до 9 имеют определенный стиль записи и распечатаны на пяти прозрачных формах, каждая из которых может быть повернута в любую сторону и наложена на другие. Уложите эти пять форм в коробку 3×3 таким образом, чтобы их стороны образовали горизонтальную или вертикальную линии. Каждая из девяти цифр должна быть единственной в коробке и должна быть читабельна.
+
+13. Роза ветров
+
+Эта роза ветров построена в квадрате со стороной 18 см. Какова площадь серой фигуры? Дайте ответ в см2, округлив его до целого количества см2 (по правилам математики).
+
+14. Два прямоугольника
+
+На листе формата А5 (это лист размером 14,8 см на 21 см), Матильда начертила 2 прямоугольника, стороны которых измеряются целыми значениями см. Эти два прямоугольника имеют одинаковый периметр, но площадь второго в два раза больше площади первого. Каков периметр этих прямоугольников?
+
+15. Числа года
+
+Если прибавить к числу 2014 произведение его четырех цифр: 2014+2∙0∙1∙4, то получится 2014. Найдите другое число, сумма которого с произведением его цифр будет равна 2014.
+
+16. Участок
+
+На бесконечном во все стороны плане находятся квадратные секторы со стороной 1 м. Мы хотим отгородить участок с помощью 20-ти барьеров длиной по 5 м. Края каждого барьера должны находиться в двух точках плана. 
+Какова максимально возможная площадь огороженного участка? Дайте ответ в м2, округлив его до целого значения (по правилам математики).
+
+17. Дорожный указатель
+
+Дорожный указатель в Математической Стране, сообщающий об опасности камнепада, имеет форму треугольника. Внутри находятся три квадрата серого цвета, причем они имеют внутри треугольника общую вершину и две вершины каждого квадрата лежат на сторонах треугольника (см. рис.). Сторона каждого из трех квадратов равна 2,8 дм. Угол треугольника, лежащий напротив стороны в 10,8 дм, равен 75о. Какова площадь треугольника? Ответ выразите в см2 и округлите до целого числа. При необходимости используйте 2=1,414, 3=1,732.
+
+18. Монеты в Математической Стране
+
+Деньги в Математической Стране называются «мато». Существует три вида монет: монета номиналом в 1 мато и две других монеты номиналом в целое количество мато, больше 1. Номинал этих монет определяется таким образом, чтобы среднее арифметическое количества монет для платежей – 0 мато, 1 мато, 2 мато, 3 мато и т.д. до 99 мато, являлось бы наименьшим. Найдите это среднее количество монет. Ответ округлите до сотых.
