--- a/_posts/mathematiques/2014-02-05-XXVIII.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII.md
@@ -5,14 +5,11 @@ author: Valentin Gubarev
 section: mathematiques
 ---
 
-[Официальный сайт чемпионата математических и логических игр в России]
-(http://nveg.ru/)
+[Официальный сайт чемпионата математических и логических игр в России](http://nveg.ru/)
 
-[Французские сайт]
-(http://www.vinc17.org/cijml/index.fr.html)
+[Французские сайт](http://www.vinc17.org/cijml/index.fr.html)
 
-[Французские сайт]
-http://www.ffjm.org/
+[Французские сайт]http://www.ffjm.org/
 
 CE – учащиеся 1 и 2 классов
 
