Ещё одна попытка создать ссылку в *.md

--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -6,7 +6,7 @@ author: Alexey Nurgaliev
 
 ### Загрузка из репозитория и запуск
 
-Этот сайт находится в репозитоии [GitHub](https://github.com/n-at/n-at.github.io)
+Этот сайт находится в репозитории [GitHub](https://github.com/n-at/n-at.github.io)
 
 Для работы с репозиториями рекомендую пользоваться [Atlassian SoureTree](http://sourcetreeapp.com/) или ПО от [GitHub](https://github.com/). Также можно пользоваться консольной программой [git](http://git-scm.com/).
 
