"Top" links. Section template

--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -111,3 +111,16 @@ class PollViewTest(TestCase):
 * `css` - стили CSS
 * `js` - файлы JavaScript
 * `img` - каталог для изображений (место размещения изображений не принципиально, но рекомендуется помещать их сюда, в отдельный каталог для статьи)
+
+### Редактирование каталога ссылок
+
+Шаблон для новой группы ссылок: 
+
+	### Название группы
+	{: #divN }
+
+	|-|-|
+	[заголовок](ссылка)|описание
+	{: .table }
+
+	[В начало](#)
