Решение 9-ой задачи
Математические и логические игры

--- a/_posts/mathematiques/2014-02-05-XXVIII.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII.md
@@ -283,6 +283,18 @@ A×B×25 = A×100+B×10+5
 
 ![Бамбуковый треугольник](/img/mathematiques/9-2014.png)
 
+<div class="solution">
+
+В данной задаче нужно помнить правило, что сумма двух любых сторон треугольника всегда больше длины третьей стороны, то есть, например, не существует треугольника со сторонами 2, 3 и 6, так как 2+3 < 6.
+
+В данной задаче ограничения малы и потому можно просто аккуратно перебрать все возможные варианты: 234, 245, 256, 345, 346, 356, 456.
+
+Также можно было несколько по иному интерпретировать правило, что разность двух длинных сторон должна быть меньше самой короткой.
+
+Тогда для короткой стороны "2" мы получаем все пары "рядом стоящих длин" (34, 45, 56). Для короткой стороны "3" мы получаем все пары "рядом стоящих длин" (45, 56), а так же через один: (46). И последнее для "4" единственная пара "рядом стоящих" (56). Понятно, что при таком восприяти правил можно количество для каждого случая рассчитывать по формуле, а не перебором, тогда задачу можно будет решить в реальном времени и с гораздо большим количеством бамбуковых палочек.
+
+Ответ: 7 треугольников.</div>
+
 <a name="10"></a>
 
 ####10. Последовательность Матиаса
