--- a/_posts/mathematiques/2014-02-05-XXVIII.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII.md
@@ -301,6 +301,22 @@ A×B×25 = A×100+B×10+5
 
 Первое число Матиаса – это 7. Он возводит его в квадрат (7×7=49), затем прибавляет 1 к сумме цифр (4+9+1=14). 14 становится вторым числом в последовательности Матиаса. И так далее Матиас прибавляет 1 к сумме цифр квадрата предыдущего числа. Каким будет тысячное число в последовательности Матиаса?
 
+<div class="solution">
+
+В этой задаче следовало заметить, что величины чисел не будут расти до бесконечности, следовательно, можно просто попробовать начать выполнять операции с надеждой, что величины начныт повторяться (появится цикл).
+
+Эмпирически факт того, что величины не будут расти до бесконечности можно показать на таком примере: предположим, что в какой-то момент получилось число 10000, тогда чтобы его получить, мы должны были возводить в квадрат число 100, но что бы на предыдущем шаге получить число 100, нам пришлось бы просуммировать 12 цифр, так как даже 11 девяток не дадут 100. В свою очередь число, состоящее из 12 цифр конечно значительно больше 10000 и оно не могло было получено, так как и 10000 мы получить не смогли!
+
+И так, решаем: 7 -> 14 -> 17 -> 20 -> 5 -> 8 -> 11 -> 5
+
+8 число в последовательности совпало с 5, то есть цикл найден и он состоит из 3-х элементов: 5 - 8 - 11.
+
+Как узнать 1000 число? Вычтем ацикличное количество элементов (их четыре: 7, 14, 17 и 20) из тысячи: 1000-4 = 996. Можно считать, что Матиас начинает с числа 5 и хочет знать, каким будет 996 число.
+
+Разделим 996 на 3 (количество элементов в цикле): 996/3 = 332 с нулевым остатком. Если бы остаток был равен 1, тогда это было бы число 5. Какое число перед 5 в цикле? Ответ на вопрос 11.
+
+Ответ: 11 - тысячное число в последовательности Матиаса.</div>
+
 <a name="11"></a>
 
 ####11. Друзья
