--- a/_posts/mathematiques/2014-02-05-XXVIII.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII.md
@@ -1,31 +1,9 @@
 ---
 layout: post
-title: XXVIII Международный чемпионат математических и логических игр
+title: 2013-2014 год. 1-й тур
 author: Valentin Gubarev
 section: mathematiques
 ---
-
-[Официальный сайт чемпионата математических и логических игр в России](http://nveg.ru)
-
-[Французские сайт](http://www.vinc17.org/cijml/index.fr.html)
-
-[Французские сайт](http://www.ffjm.org)
-
-CE – учащиеся 1 и 2 классов
-
-CM – учащиеся 3, 4 и 5 классов
-
-C1 – учащиеся 6 и 7 классов
-
-C2 – учащиеся 8 и 9 классов
-
-L1 – учащиеся 10 и 11 классов
-
-L2 – студенты высших учебных заведений 4-5(6) курсов
-
-GP – студенты 1-3 курсов высших учебных заведений; учащиеся техникумов, лицеев, колледжей; взрослые, не имеющие специального математического образования
-
-HC – взрослые, имеющие математическое образование
 
 [Задания 1-го тура](../../../docs/mathematiques/2014_zadania_1tur.pdf)  
 [Бланк ответов 1-го тура](../../../docs/mathematiques/2014_blank_1tur.pdf)
