Отдельный js файл

--- a/_posts/mathematiques/2014-02-05-XXVIII.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII.md
@@ -5,6 +5,8 @@ author: Valentin Gubarev
 section: mathematiques
 ---
 
+<script src="/js/mathematiques.js"></script>
+
 [Задания 1-го тура](../../../docs/mathematiques/2014_zadania_1tur.pdf)  
 [Бланк ответов 1-го тура](../../../docs/mathematiques/2014_blank_1tur.pdf)
 
@@ -351,29 +353,3 @@ A×B×25 = A×100+B×10+5
 ####18. Монеты в Математической Стране
 
 Деньги в Математической Стране называются «мато». Существует три вида монет: монета номиналом в 1 мато и две других монеты номиналом в целое количество мато, больше 1. Номинал этих монет определяется таким образом, чтобы среднее арифметическое количества монет для платежей – 0 мато, 1 мато, 2 мато, 3 мато и т.д. до 99 мато, являлось бы наименьшим. Найдите это среднее количество монет. Ответ округлите до сотых.
-
-<script>
-	$(function() {
-		$('.solution').each(function(){
-			var cur = $(this);
-			var text = cur.html();
-			cur.text(' ').addClass('panel panel-default');
-			$('<div class="panel-heading"></div>').text('Решение').click(BlockClick).appendTo(cur);
-			var blockBody = $('<div class="panel-body"></div>').html(coolFormat(text)).appendTo(cur);
-			blockBody.hide();
-		});
-	});
-	
-	function coolFormat(text) {
-		var txt = text.split('\n\n');
-		var out = '';
-		for(var i = 0; i < txt.length; i++) {
-			out += '<p>' + txt[i] + '</p>';
-		}
-		return out;
-	}
-	
-	function BlockClick() {
-		$(this).next('div.panel-body').slideToggle();
-	}
-</script>
