--- a/_posts/mathematiques/2014-04-13-XXVIII-2.md
+++ b/_posts/mathematiques/2014-04-13-XXVIII-2.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: 2013-2014 год. 1-й тур
+title: 2013-2014 год. 2-й тур
 author: Valentin Gubarev
 section: mathematiques
 ---
 
 <script src="/js/mathematiques.js"></script>
 
-[Задания 1-го тура](../../../docs/mathematiques/2014_zadania_2tur.pdf)  
-[Бланк ответов 1-го тура](../../../docs/mathematiques/2014_blank_2tur.pdf)
+[Задания 2-го тура](../../../docs/mathematiques/2014_zadania_2tur.pdf)  
+[Бланк ответов 2-го тура](../../../docs/mathematiques/2014_blank_2tur.pdf)
 
 ---
 
@@ -63,7 +63,7 @@ section: mathematiques
 
 <div class="solution">
 
-Ответ: 8.
+Ответ: 8.</div>
 
 <a name="3"></a>
 
