--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -8,7 +8,7 @@ language: 'C/C++'
 
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел нахывают FPU (Floating Point Unit - Модуль Плавающей запятой).
 
-<table>
+<table border="1" bordercolor="black">
 <tr>
 <th colspan="1">+-</th>
 <th colspan="11">Порядок<br>(11 бит)</th>
