--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -8,6 +8,7 @@ language: 'C/C++'
 
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел нахывают FPU (Floating Point Unit - Модуль Плавающей запятой).
 
+<font size="8" face="Courier New">
 <table border="1" bordercolor="black">
 <tr>
 <th colspan="1">+-</th>
@@ -16,7 +17,7 @@ language: 'C/C++'
 </tr>
 <tr>
 <th>63</th> 
-th>62</th> <th>61</th> <th>60</th> <th>59</th> <th>58</th> <th>57</th> <th>56</th> <th>55</th> <th>54</th> <th>53</th> <th>52</th>
+<th>62</th> <th>61</th> <th>60</th> <th>59</th> <th>58</th> <th>57</th> <th>56</th> <th>55</th> <th>54</th> <th>53</th> <th>52</th>
 <th>51</th>
 <th>50</th> <th>49</th> <th>48</th>
 <th>47</th> <th>46</th> <th>45</th> <th>44</th> <th>43</th> <th>42</th> <th>41</th> <th>40</th>
@@ -27,3 +28,4 @@ th>62</th> <th>61</th> <th>60</th> <th>59</th> <th>58</th> <th>57</th> <th>56</t
 <th> 7</th> <th> 6</th> <th> 5</th> <th> 4</th> <th> 3</th> <th> 2</th> <th> 1</th> <th> 0</th>
 </tr>
 </table>
+</font>
