--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -1,31 +1,34 @@
 ---
 layout: post
 title: Формат числа с плавающей запятой - double С/С++
-author: Valentin Gubarev
+autdor: Valentin Gubarev
 section: programming
 language: 'C/C++'
 ---
 
-Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел нахывают FPU (Floating Point Unit - Модуль Плавающей запятой).
+Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел называют FPU (Floating Point Unit - Модуль Плавающей Запятой).
 
-<font size="1" face="Courier New">
-<table border="1" bordercolor="black">
+<font size="2" face="Courier New">
+<table border="1" bordercolor="black" align="center" valign="center">
 <tr>
-<th colspan="1">+-</th>
-<th colspan="11">Порядок<br>(11 бит)</th>
-<th colspan="52">Мантисса<br>(52 бита)</th>
+<td colspan="1">+-</td>
+<td colspan="11">Порядок<br>(11 бит)</td>
+<td colspan="52">Мантисса<br>(52 бита)</td>
 </tr>
 <tr>
-<th>63</th> 
-<th>62</th> <th>61</th> <th>60</th> <th>59</th> <th>58</th> <th>57</th> <th>56</th> <th>55</th> <th>54</th> <th>53</th> <th>52</th>
-<th>51</th>
-<th>50</th> <th>49</th> <th>48</th>
-<th>47</th> <th>46</th> <th>45</th> <th>44</th> <th>43</th> <th>42</th> <th>41</th> <th>40</th>
-<th>39</th> <th>38</th> <th>37</th> <th>36</th> <th>35</th> <th>34</th> <th>33</th> <th>32</th>
-<th>31</th> <th>30</th> <th>29</th> <th>28</th> <th>27</th> <th>26</th> <th>25</th> <th>24</th>
-<th>23</th> <th>22</th> <th>21</th> <th>20</th> <th>19</th> <th>18</th> <th>17</th> <th>16</th>
-<th>15</th> <th>14</th> <th>13</th> <th>12</th> <th>11</th> <th>10</th> <th>09</th> <th>08</th>
-<th>07</th> <th>06</th> <th>05</th> <th>04</th> <th>03</th> <th>02</th> <th>01</th> <th>00</th>
+<td>63</td> 
+<td>62</td> <td>61</td> <td>60</td> <td>59</td> <td>58</td> <td>57</td> <td>56</td> <td>55</td> <td>54</td> <td>53</td> <td>52</td>
+<td>51</td>
+<td>50</td> <td>49</td> <td>48</td>
+<td>47</td> <td>46</td> <td>45</td> <td>44</td> <td>43</td> <td>42</td> <td>41</td> <td>40</td>
+<td>39</td> <td>38</td> <td>37</td> <td>36</td> <td>35</td> <td>34</td> <td>33</td> <td>32</td>
+<td>31</td> <td>30</td> <td>29</td> <td>28</td> <td>27</td> <td>26</td> <td>25</td> <td>24</td>
+<td>23</td> <td>22</td> <td>21</td> <td>20</td> <td>19</td> <td>18</td> <td>17</td> <td>16</td>
+<td>15</td> <td>14</td> <td>13</td> <td>12</td> <td>11</td> <td>10</td> <td>09</td> <td>08</td>
+<td>07</td> <td>06</td> <td>05</td> <td>04</td> <td>03</td> <td>02</td> <td>01</td> <td>00</td>
 </tr>
 </table>
 </font>
+
+Формат числа определяет значение, которое в десятичной системе счисления будет равно +-1,мантисса * 2^(порядок-011111..11). Заметим, что перед запятой всегда 1 и она в явном виде не хранится.
+
