плюс минус и степень

--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -9,11 +9,11 @@ language: 'C/C++'
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел называют FPU (Floating Point Unit - Модуль Плавающей Запятой).
 
 <font size="2" face="Courier New">
-<table border="1" bordercolor="black" align="center" valign="center">
+<table border="1" bordercolor="black">
 <tr>
-<td colspan="1">+-</td>
-<td colspan="11">Порядок<br>(11 бит)</td>
-<td colspan="52">Мантисса<br>(52 бита)</td>
+<td colspan="01" align="center" valign="center">+-</td>
+<td colspan="11" align="center" valign="center">Порядок<br>(11 бит)</td>
+<td colspan="52" align="center" valign="center">Мантисса<br>(52 бита)</td>
 </tr>
 <tr>
 <td>63</td> 
@@ -30,5 +30,5 @@ language: 'C/C++'
 </table>
 </font>
 
-Формат числа определяет значение, которое в десятичной системе счисления будет равно +-1,мантисса * 2^(порядок-011111..11). Заметим, что перед запятой всегда 1 и она в явном виде не хранится.
+Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1,мантисса &times; 2<sup>порядок-011111..11</sup>. Заметим, что перед запятой всегда 1 и она в явном виде не хранится.
 
