--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -11,7 +11,7 @@ language: 'C/C++'
 <font size="2" face="Courier New">
 <table border="1" bordercolor="black">
 <tr>
-<td colspan="01" align="center" valign="center">+-</td>
+<td colspan="01" align="center" valign="center">&plusmn;</td>
 <td colspan="11" align="center" valign="center">Порядок<br>(11 бит)</td>
 <td colspan="52" align="center" valign="center">Мантисса<br>(52 бита)</td>
 </tr>
@@ -30,5 +30,28 @@ language: 'C/C++'
 </table>
 </font>
 
-Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1,мантисса &times; 2<sup>порядок-011111..11</sup>. Заметим, что перед запятой всегда 1 и она в явном виде не хранится.
+Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1.мантисса &times; 2<sup>порядок-011111..11</sup>. Заметим, что перед запятой всегда 1 и она в явном виде не хранится.
+
+Ниже представлена программа на C/C++ выводящая побитого 8 байт числа double.
+<pre size="2" face="Courier New">
+#include<stdio.h>
+void print(char *x){
+	for (int i = 7; i >=0; --i)
+		printf("%c", "01"[((*x) >> i) & 1]);
+	printf(" ");
+}
+int main(){
+	freopen("output.txt", "wt", stdout);
+	double num;
+	scanf("%lf", &num);
+	char* a[8];
+	for (int i = 0; i < 8; ++i){
+		a[i] = (char*)&num;
+		a[i]+=i;
+		print(a[i]);
+	}
+	return 0;
+}
+</pre>
+
 
