--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -30,10 +30,11 @@ language: 'C/C++'
 </table>
 </font>
 
-Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1.мантисса &times; 2<sup>порядок-011111..11</sup>. Заметим, что перед запятой всегда 1 и она в явном виде не хранится.
+Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1.мантисса &times; 2<sup>порядок-011111..11</sup>. Перед точкой, отделяющей целую часть от дробной всегда 1 и она в явном виде не хранится.
 
 Ниже представлена программа на C/C++ выводящая побитого 8 байт числа double.
-<pre size="2" face="Courier New">
+<font size="2" face="Courier New">
+<pre>
 #include<stdio.h>
 void print(char *x){
 	for (int i = 7; i >=0; --i)
@@ -47,11 +48,12 @@ int main(){
 	char* a[8];
 	for (int i = 0; i < 8; ++i){
 		a[i] = (char*)&num;
-		a[i]+=i;
+		a[i] += i;
 		print(a[i]);
 	}
 	return 0;
 }
 </pre>
+</font>
 
 
