--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Формат числа с плавающей запятой - double С/С++
-autdor: Valentin Gubarev
+author: Valentin Gubarev
 section: programming
 language: 'C/C++'
 ---
@@ -33,8 +33,8 @@ language: 'C/C++'
 Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1.мантисса &times; 2<sup>порядок-011111..11</sup>. Перед точкой, отделяющей целую часть от дробной всегда 1 и она в явном виде не хранится.
 
 Ниже представлена программа на C/C++ выводящая побитого 8 байт числа double.
-<font size="2" face="Courier New">
-<pre>
+
+{% highlight cpp %}
 #include<stdio.h>
 void print(char *x){
 	for (int i = 7; i >=0; --i)
@@ -53,7 +53,6 @@ int main(){
 	}
 	return 0;
 }
-</pre>
-</font>
+{% endhighlight %}
 
 
