строка в таблицу double

--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -16,6 +16,16 @@ language: 'C/C++'
 <td colspan="52" align="center" valign="center">Мантисса<br>(52 бита)</td>
 </tr>
 <tr>
+<td colspan="8" align="center" valign="center">0 байт;</td>
+<td colspan="8" align="center" valign="center">1 байт;</td>
+<td colspan="8" align="center" valign="center">2 байт;</td>
+<td colspan="8" align="center" valign="center">3 байт;</td>
+<td colspan="8" align="center" valign="center">4 байт;</td>
+<td colspan="8" align="center" valign="center">5 байт;</td>
+<td colspan="8" align="center" valign="center">6 байт;</td>
+<td colspan="8" align="center" valign="center">7 байт;</td>
+</tr>
+<tr>
 <td>63</td> 
 <td>62</td> <td>61</td> <td>60</td> <td>59</td> <td>58</td> <td>57</td> <td>56</td> <td>55</td> <td>54</td> <td>53</td> <td>52</td>
 <td>51</td>
