Изменён порядок байт

--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -16,14 +16,14 @@ language: 'C/C++'
 <td colspan="52" align="center" valign="center">Мантисса<br>(52 бита)</td>
 </tr>
 <tr>
-<td colspan="8" align="center" valign="center">0 байт;</td>
-<td colspan="8" align="center" valign="center">1 байт;</td>
-<td colspan="8" align="center" valign="center">2 байт;</td>
-<td colspan="8" align="center" valign="center">3 байт;</td>
-<td colspan="8" align="center" valign="center">4 байт;</td>
-<td colspan="8" align="center" valign="center">5 байт;</td>
-<td colspan="8" align="center" valign="center">6 байт;</td>
-<td colspan="8" align="center" valign="center">7 байт;</td>
+<td colspan="8" align="center" valign="center">7 байт</td>
+<td colspan="8" align="center" valign="center">6 байт</td>
+<td colspan="8" align="center" valign="center">5 байт</td>
+<td colspan="8" align="center" valign="center">4 байт</td>
+<td colspan="8" align="center" valign="center">3 байт</td>
+<td colspan="8" align="center" valign="center">2 байт</td>
+<td colspan="8" align="center" valign="center">1 байт</td>
+<td colspan="8" align="center" valign="center">0 байт</td>
 </tr>
 <tr>
 <td>63</td> 
@@ -55,14 +55,10 @@ int main(){
 	freopen("output.txt", "wt", stdout);
 	double num;
 	scanf("%lf", &num);
-	char* a[8];
-	for (int i = 0; i < 8; ++i){
-		a[i] = (char*)&num;
-		a[i] += i;
-		print(a[i]);
-	}
+	for (int i = 7; i >=0; --i)
+		print(((char*)&num)+i);
 	return 0;
 }
 {% endhighlight %}
 
-
+В архитектуре микропроцессоров Intel более старшие байты хранятся в более старших адресах, поэтому, для формирования в текстовом файле "output.txt" данных соотвтетсвующих рисунку на сайте цикл осуществлён от 7 до 0, а не от 0 к 7 (см. цикл for в main).
