--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -25,7 +25,7 @@ language: 'C/C++'
 <td colspan="8" align="center" valign="center">1 байт</td>
 <td colspan="8" align="center" valign="center">0 байт</td>
 </tr>
-<tr>
+<tr align="center" valign="center">
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
