--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -9,23 +9,23 @@ language: 'C/C++'
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел называют FPU (Floating Point Unit - Модуль Плавающей Запятой).
 
 <font size="2" face="Courier New">
-<table border="1" bordercolor="black">
+<table border="1" bordercolor="black" align="center" valign="center">
 <tr>
-<td colspan="01" align="center" valign="center">&plusmn;</td>
-<td colspan="11" align="center" valign="center">Порядок<br>(11 бит)</td>
-<td colspan="52" align="center" valign="center">Мантисса<br>(52 бита)</td>
+<td colspan="01">&plusmn;</td>
+<td colspan="11">Порядок<br>(11 бит)</td>
+<td colspan="52">Мантисса<br>(52 бита)</td>
+</tr>
+<tr">
+<td colspan="8">7 байт</td>
+<td colspan="8">6 байт</td>
+<td colspan="8">5 байт</td>
+<td colspan="8">4 байт</td>
+<td colspan="8">3 байт</td>
+<td colspan="8">2 байт</td>
+<td colspan="8">1 байт</td>
+<td colspan="8">0 байт</td>
 </tr>
 <tr>
-<td colspan="8" align="center" valign="center">7 байт</td>
-<td colspan="8" align="center" valign="center">6 байт</td>
-<td colspan="8" align="center" valign="center">5 байт</td>
-<td colspan="8" align="center" valign="center">4 байт</td>
-<td colspan="8" align="center" valign="center">3 байт</td>
-<td colspan="8" align="center" valign="center">2 байт</td>
-<td colspan="8" align="center" valign="center">1 байт</td>
-<td colspan="8" align="center" valign="center">0 байт</td>
-</tr>
-<tr align="center" valign="center">
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
