вертикальное и горизонтальное центрирование

--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -9,13 +9,13 @@ language: 'C/C++'
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел называют FPU (Floating Point Unit - Модуль Плавающей Запятой).
 
 <font size="2" face="Courier New">
-<table border="1" bordercolor="black" align="center" valign="center">
-<tr>
+<table border="1" bordercolor="black">
+<tr align="center" valign="center">
 <td colspan="01">&plusmn;</td>
 <td colspan="11">Порядок<br>(11 бит)</td>
 <td colspan="52">Мантисса<br>(52 бита)</td>
 </tr>
-<tr">
+<tr align="center" valign="center">
 <td colspan="8">7 байт</td>
 <td colspan="8">6 байт</td>
 <td colspan="8">5 байт</td>
@@ -25,7 +25,7 @@ language: 'C/C++'
 <td colspan="8">1 байт</td>
 <td colspan="8">0 байт</td>
 </tr>
-<tr>
+<tr align="center" valign="center">
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
@@ -35,7 +35,7 @@ language: 'C/C++'
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>8</td> <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 </tr>
-<tr>
+<tr align="center" valign="center">
 <td>63</td> 
 <td>62</td> <td>61</td> <td>60</td> <td>59</td> <td>58</td> <td>57</td> <td>56</td> <td>55</td> <td>54</td> <td>53</td> <td>52</td>
 <td>51</td>
