--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -8,8 +8,7 @@ language: 'C/C++'
 
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел называют FPU (Floating Point Unit - Модуль Плавающей Запятой).
 
-<font size="2" face="Courier New">
-<table border="1" bordercolor="black">
+<table border="1" bordercolor="black" style="font-size: 10px; font-face: Courier New;">
 <tr align="center" valign="center">
 <td colspan="01">&plusmn;</td>
 <td colspan="11">Порядок<br>(11 бит)</td>
@@ -48,7 +47,6 @@ language: 'C/C++'
 <td>07</td> <td>06</td> <td>05</td> <td>04</td> <td>03</td> <td>02</td> <td>01</td> <td>00</td>
 </tr>
 </table>
-</font>
 
 Формат числа определяет значение, которое в десятичной системе счисления будет равно &plusmn;1.мантисса &times; 2<sup>порядок-011111..11</sup>. Перед точкой, отделяющей целую часть от дробной всегда 1 и она в явном виде не хранится.
 
