--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -8,7 +8,7 @@ language: 'C/C++'
 
 Число двойной точности double поддерживается процессорами на аппаратном уровне. Модуль поддерживающий обработку таких чисел называют FPU (Floating Point Unit - Модуль Плавающей Запятой).
 
-<table border="1" bordercolor="black" style="font-size: 10px; font-face: Courier New;">
+<table border="1" bordercolor="black" style="font-size: 12px; font-face: Courier New;" width="100%">
 <tr align="center" valign="center">
 <td colspan="01">&plusmn;</td>
 <td colspan="11">Порядок<br>(11 бит)</td>
@@ -34,7 +34,7 @@ language: 'C/C++'
 <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 <td>7</td> <td>6</td> <td>5</td> <td>5</td> <td>3</td> <td>2</td> <td>1</td> <td>0</td>
 </tr>
-<tr align="center" valign="center">
+<tr align="center" valign="center" style="font-size: 10px;">
 <td>63</td> 
 <td>62</td> <td>61</td> <td>60</td> <td>59</td> <td>58</td> <td>57</td> <td>56</td> <td>55</td> <td>54</td> <td>53</td> <td>52</td>
 <td>51</td>
