--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -56,7 +56,7 @@ language: 'C/C++'
 #include<stdio.h>
 void print(char *x){
     for (int i = 7; i >=0; --i)
-        printf("%c", '0'+(((*x) >> i) & 1));
+        printf("%c", '0'+((*x >> i) & 1));
     printf(" ");
 }
 int main(){
