3 тур мат лог игр
пока без решений

--- a/_posts/mathematiques/2014-04-13-XXVIII-2.md
+++ b/_posts/mathematiques/2014-04-13-XXVIII-2.md
@@ -166,7 +166,7 @@ section: mathematiques
 
 ####12. Из пяти квадратов один
 
-ЦРазделите фигуру на минимальное количество частей так, чтобы из всех них можно было собрать один большой квадрат.
+Разделите фигуру на минимальное количество частей так, чтобы из всех них можно было собрать один большой квадрат.
 
 <a name="13"></a>
 
@@ -178,7 +178,7 @@ section: mathematiques
 
 ####14. Последовательность
 
-дана последовательность a1 = 20, a2 = 14. Затем, для каждого следующего элемента последовательности действует соотношение a_n+2 = (1+a_n+1) / a_n.<br>
+Дана последовательность a1 = 20, a2 = 14. Затем, для каждого следующего элемента последовательности действует соотношение a_n+2 = (1+a_n+1) / a_n.<br>
 Таким образом; a_3 = 3/4, и т.д. Найдите a_2014. Если ответ не является целым, тогда запишите его в виде несократимой дроби.
 
 <a name="15"></a>
