--- a/_posts/mathematiques/2014-04-13-XXVIII-2.md
+++ b/_posts/mathematiques/2014-04-13-XXVIII-2.md
@@ -206,3 +206,33 @@ section: mathematiques
 ####18. Счастливый год
 
 N_1 = 13^0, N_2 = 13^1, N_3 = 13^2, N_4 = 2014. Затем, каждый следующий член последовательности равен сумме четырёх предыдущих членов. Так, N_5 = 13^0 + 13^1 + 13^2 + 2014 = 13^3. Какое количество цифр будет содержать N_2014? Если необходимо, примите lg(1,928)=0,285, lg(8.748)=0.942.
+
+<div class="solution">
+Следует начать с вычисления очередного N_i:
+1, 13, 169, 2014, 2197, ...
+каждый раз складывать по 4 числа не обязательно, то есть вместо
+N[i] = N[i-1] + N[i-2] + N[i-3] + N[i-4]
+можно вычислять так:
+N[i] = 2 * N[i-1] - N[i-5]
+N[6] = 2 * 2197 - 1 = 4393
+N[7] = 2 * 4393 - 13 = 8773
+N[8] = 2 * 8773 - 169 = 17377
+N[9] = 2 * 17377 - 2014 = 32740
+
+N[6] / N[5] = 1,9995
+N[7] / N[6] = 1,9970
+N[8] / N[7] = 1,9807
+
+N[10] = 2 * 32740 - 2197 = 63283
+N[11] = 2 * 63283 - 4393 = 122173
+N[12] = 2 * 122173 - 8773 = 235573
+N[13] = 2 * 235573 - 17377 = 453769
+N[14] = 2 * 453769 - 32740 = 874798
+
+N[14] / N[13] = 1,9278
+
+Далее отношения будут отличаться незначительно, а их логарифмы и того меньше.
+Так как lg(1,928)=0,285 и lg(N[i]) = 0,285 * lg(N[i-1]), следует,
+lg(N[2014]) = 2000 * 0,285 + 6 = 576
+где 6 - количество цифр в записи N[14]
+Ответ: 576 цифр в записи числа N[2014].</div>
