Условия финала Франция
28 и 29 августа (без рисунков)

--- a/_posts/mathematiques/2014-08-28-XXVIII-4.md
+++ b/_posts/mathematiques/2014-08-28-XXVIII-4.md
@@ -195,25 +195,25 @@ section: mathematiques
 
 ####13. Взвешивания
 
-
+Имеется шесть гирек занумерованных от 1 до 6 в порядке возрастания их масс; то есть, вторая гирька весит больше первой, третья больше второй и так далее. Массы всех гирек различны. Имеются также весы с двумя чашами. За одно взвешивание разрешается положить по три гирьки на каждую чашу весов. Известно, что имеется способ разложить гирьки так, что весы окажутся в равновесии. Требуется добиться равновесия не больше чем за три взвешивания. Какие две гирьки следует положить на одну чашу весов с гирькой номер 1 во время первого взвешивания? Укажите их номера в возрастающем порядке.
 
 <a name="14"></a>
 
 ####14. Крот
 
-
+На рисунке изображён вертикальный срез подземного домика, в котором живёт крот. Крот любит каждый день добираться от входа в домик (буква T на рисунке) к своей спальне (буква C на рисунке) по новому пути. При этом, путь не дожен проходить два раза по одному и тому же туннелю или по одному и тому же перекрёстку. Кроме того, по тунелям со стрелками разрешается передвигаться только в направлении стрелок. Крот посчитал, что всего у него в запасе 2014 разных путей. Сколько из них проходят через левый нижний угол (вопросительный знак на рисунке)?
 
 <a name="15"></a>
 
 ####15. Счастливое число
 
-
+Натуральное число называется счастливым, если у него ровно в 13 раз меньше положительных делителей, чем у его куба. (При подсчёте делителей учитываются 1 и само число. Так, у числа 30 ровно 8 положительных делителей, что в 8 раз меньше, чем у его куба 30^3=27000). Сколько положительных делителей может быть у счастливого числа?
 
 <a name="16"></a>
 
 ####16. Магический брильянт
 
-
+В кругах на рисунке расставлены целые числа от 0 до 14, причём все числа встречаются по одному разу, кроме трёх, которые вовсе не используются. Во всех девяти отрезках из трёх или четырёх дисков сумма чисел одна и та же, причём наименьшая возможная. Числа в кругах a, b, c идут в возрастающем порядке. Расставьте числа в круги.
 
 Конец категорий L1, GP.
 
@@ -221,12 +221,12 @@ section: mathematiques
 
 ####17. Консервные банки
 
-
+Имеется набор одинаковых консервных банок в форме цилиндра, причём диаметр цилиндра в два раза больше его высоты. При пересылке консервные банки складываются в кубические коробки так, чтобы хотя бы одна сторона каждой банки (то есть основание цилиндра) полностью прилегала к грани коробки. На левой картинке показана самая маленькая коробка, в которую можно поместить три банки. На правой картинке показана самая маленькая коробка, в которую можно поместить шесть банок. Оказалось, что сторона куба на правой картинке ровно на миллиметр больше стороны куба на левой картинке. Найдите диаметр консервной банки в миллиметрах. Ответ округлите до ближайшего миллиметра. Вам может потребоваться приближение \sqrt{65}\approx 8,062.
 
 <a name="18"></a>
 
 ####18. Белое и чёрное
 
-
+Клетки прямоугольника 4Х3 можно раскрасить в чёрный и белый цвет 4096 способами. Мастер выпускает игры, в которых у чёрно-белого прямоугольника 4Х3 можно целиком переставить две строки или два столбца. Две игры называются эквивалентными, если раскраску одной из них можно превратить в раскраску другой такими перестановками. Например, на рисунке показаны четыре эквивалентные игры. Какое максимальное количество попарно неэквивалентных игр удастся сделать мастеру?
 
 Конец категорий L2, HC.
