--- a/_posts/mathematiques/2014-08-28-XXVIII-4.md
+++ b/_posts/mathematiques/2014-08-28-XXVIII-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2013-2014 год. 4-й тур (очный), Франция
+title: 2013-2014 год. 4-й тур (очный), Франция (28 августа 2014)
 author: Valentin Gubarev
 section: mathematiques
 ---
@@ -42,7 +42,10 @@ section: mathematiques
 
 Коля закалякал четыре цифры равенства, в котором каждая цифра от 0 до 9 встречалась ровно по одному разу. Восстановите закаляканные цифры.
 
+![Каляки-маляки](/img/mathematiques/2014_4_1.png)
+
 <div class="solution">
+
 тут надо решение
 
 Ответ: ___.</div>
@@ -83,6 +86,8 @@ section: mathematiques
 
 На рисунке изображён фасад дома. Леночка вбила гвоздик в одну из чёрных точек, но тут от гвоздика по стене побежали три трещины, разделив фасад на три одинаковые части. Каждая трещина представляет из себя ломаную линию, отрезки которой соединяют две соседние точки по вертикали, горизонтали, или диагонали. Нарисуйте трещины.
 
+![Трещины](/img/mathematiques/2014_4_4.png)
+
 <div class="solution">
 
 тут надо решение
@@ -94,6 +99,8 @@ section: mathematiques
 ####5. Оладушки
 
 Братец иванушка испёк четыре оладцшка разных размеров и положил их на блюде как показано на левой картинке. Прежде чем нести оладьи на стол, сестрица Алёнушка хочет разложить их по порядку, от самого большого снизу до самого маленького сверху, как показано на правой картинке. Для этого у сестрицы Алёнушки есть деревянная лопатка. Она засовывает свою лопатку под один из оладьев (кроме самоговерхнего) и переворачивает целиком всю стопку из двух, трёх или четырёх оладий на лопатке. За какое наименьшее число переворотов Алёнушка может разложить оладушки по порядку?
+
+![Оладушки](/img/mathematiques/2014_4_5.png)
 
 <div class="solution">
 
@@ -109,6 +116,8 @@ section: mathematiques
 
 В пяти вершинах решётки, отмеченных чёрными точками, стоят одинаковые сундуки. Грузчик должен собрать все сундуки в одном узле решётки; при этом он может передвигаться только по линиям решётки (по вертикали или по горизонтали). Например, чтобы собрать все сундуки в точке, отмеченной крестиком, грузчику в сумме придётся пройти с сундуками на плечах расстояние в 23 клетки. Грузчик спросил приятеля математика, в каком узле решётки ему следует собрать сундуки, чтобы в сумме ему пришлось пройти как можно меньшее расстояние с сундуками на плечах. Математик нашёл нужный узел решётки и грузчик собрал там все сундуки, неся их по самому которкому пути вдоль линий решётки. Сколько клеток ему пришлось пройти с сундуками на плечах?
 
+![Грузчик](/img/mathematiques/2014_4_6.png)
+
 <div class="solution">
 
 тут надо решение
@@ -121,6 +130,8 @@ section: mathematiques
 
 В клетках квадрата 3Х3 были написаны все числа от 1 до 9 (по одному числу в каждой клетке). При этом сумма четырёх чисел во всех четырёх квадратах 2Х2 была, во-первых, одной и той же и, во-вторых, максимальной возможной с учётом первого условия. Семь из девяти чисел стёрли. Восстановите их.
 
+![Квадратики](/img/mathematiques/2014_4_7.png)
+
 <div class="solution">
 
 тут надо решение
@@ -132,6 +143,8 @@ section: mathematiques
 ####8. Тетраэдр
 
 На рисунке изображён тетраэдр (пунктиром показано заднее ребро). В вершинах тетраэдра (в окружностях) и на его рёбрах (в квадратиках) стоят числа от 1 до 11, причём каждое встречаются ровно по одному разу, кроме одного числа, которое вообще не используется. Известно, что число, стоящее на ребре, всегда на один больше суммы чисел, стоящих в вершинах на его концах. Например, вершины с числами 1 и 4 должны быть соединены ребром с числом 6. Кроме того, числа в вершинах a, b, c, d идут в возрастающем порядке. Расставьте числа в вершины и рёбра, согласно условиям.
+
+![Тетраэдр](/img/mathematiques/2014_4_8.png)
 
 <div class="solution">
 
