--- a/_posts/mathematiques/2014-08-29-XXVIII-4.md
+++ b/_posts/mathematiques/2014-08-29-XXVIII-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2013-2014 год. 4-й тур (очный), Франция
+title: 2013-2014 год. 4-й тур (очный), Франция (29 августа 2014)
 author: Valentin Gubarev
 section: mathematiques
 ---
